          - Prioritize skilled dwarves more efficiently
          - Prevent dwarves from running away with tools from previous jobs
        dwarfmonitor:
          - widgets' positions, formats, etc. are now customizable (see Readme)
          - weather display now separated from the date display
          - New mouse cursor widget
        full-heal: "-r" option removes corpses
        gui/gm-editor: Pointers can now be displaced
        gui/hack-wish: renamed to gui/create-item
        "keybinding list" accepts a context
        lever:
          - Lists lever names
          - "lever pull" can be used to pull the currently-selected lever
        memview: Fixed display issue
        nyan: Can now be stopped with dfhack-run
        quicksave: Restricted to fortress mode
        remotefortressreader: Exposes more information
        search:
          - Supports noble suggestion screen (e.g. suggesting a baron)
          - Supports fortress mode loo[k] menu
          - Recognizes ? and ; keys
        teleport: Fixed cursor recognition
        tweak:
          - debug output now logged to stderr.log instead of console - makes DFHack start faster
          - farm-plot-select: Fixed issues with selecting undiscovered crops
        workflow: Improved handling of plant reactions
    Removed

DFHack 0.40.24-r3
    Internals
        Ruby library now included on OS X - ruby scripts should work on OS X 10.10
        libstdc++ should work with older versions of OS X
        Added support for onLoadMap/onUnloadMap.init scripts
        game type detection functions are now available in the World module
        The DFHACK_LOG_MEM_RANGES environment variable can be used to log information to stderr.log on OS X
        Fixed adventure mode menu names
        Fixed command usage information for some commands
    Lua
        Lua scripts will only be reloaded if necessary
        Added a df2console() wrapper, useful for printing DF (CP437-encoded) text to the console in a portable way